@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-15T12:28:44Z",
-  "count_outdated" : 5228,
-  "uniques_outdated" : 2856,
+  "timestamp" : "2025-08-16T01:09:09Z",
+  "count_outdated" : 5229,
+  "uniques_outdated" : 2857,
   "count" : 5276,
   "uniques" : 2896,
   "clones" : [
-    {
-      "timestamp": "2025-08-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-03T00:00:00Z",
       "count": 2,
