@@ -1,12 +1,7 @@
 {
-  "count": 48,
-  "uniques": 24,
+  "count": 47,
+  "uniques": 23,
   "clones": [
-    {
-      "timestamp": "2025-08-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-08-03T00:00:00Z",
       "count": 2,
